@@ -1,15 +1,21 @@
+2011-02-20  Kevin B. Kenny  <kennykb@acm.org>
+
+	* tests/tdbcsqlite3.test (tdbc::sqlite3-30.[45]):
+			Added tests for [foreach] and [allrows] against
+			multiple result sets.
+
 2011-01-26  Kevin B. Kenny  <kennykb@acm.org>
 
 	* doc/tdbc_sqlite3.n:
 	Added empty comment at the start of each manpage because 'man'
 	interprets comments there as directives.
-	
+
 2010-09-03  Kevin B. Kenny  <kennykb@acm.org>
 
 	* Makefile.in:	Added a semicolon to the end of the -load option
 			on 'make test'. Without it, msys make changes all
 			the forward slashes in the -load option to backslashes.
-	
+
 	* library/tdbcsqlite3.tcl:
 	* tests/tdbcsqlite3.test:
 			Changed 'keySequence' in 'foreignkeys' to
